issues resolved from Stack.java